# cube4

./: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
build-backend/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
build-config/: COPYING  VERSION
src/: Makefile.cubew.inc.am  config-include.h.in  config.h.in  cube-config.in  cubew_cubew.c  cubew_cubew.h
